Crisis Response App/objects/Impacted_Person__c.object
<CustomObject>
    <description>A person who may or may not be impacted by a crisis. This could be a list of all employees, or be added on-demand if a data load is not available.</description>
    <fields>
        <fullName>City__c</fullName>
        <description>Individual&apos;s address (City)</description>
        <inlineHelpText>Individual&apos;s address (City)</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Individual&apos;s Address (Country)</description>
        <inlineHelpText>Individual&apos;s Address (Country)</inlineHelpText>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currently_Impacted__c</fullName>
        <formula>IF(Number_Impact__c = 0, &quot;No&quot;, &quot;Yes &quot; &amp; IMAGE(&quot;/resource/crisisapp__crisis_warning&quot;, &quot;Yes&quot;, 20, 20 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the individual currently impacted by a crisis?</inlineHelpText>
        <label>Currently Impacted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_Mail_Address__c</fullName>
        <label>E-Mail Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <label>Employee ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Number__c</fullName>
        <label>Home Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_E_Mail__c</fullName>
        <description>Individual manager&apos;s e-mail address.</description>
        <label>Manager E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <label>Manager Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Phone__c</fullName>
        <description>Individual manager&apos;s phone number</description>
        <label>Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Marked_Safe_Records__c</fullName>
        <label># Marked Safe Records</label>
        <summaryFilterItems>
            <field>Impacted_Individual_Junction__c.Status__c</field>
            <operation>equals</operation>
            <value>Marked Safe / Not Impacted</value>
        </summaryFilterItems>
        <summaryForeignKey>Impacted_Individual_Junction__c.Person__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Marked_Safe__c</fullName>
        <formula>IF( Marked_Safe_Records__c &gt; 0, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays &quot;Yes&quot; if the person has any &quot;Marked Safe / Not Impacted&quot; Impact logged.</inlineHelpText>
        <label>Marked Safe?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Number_Impact__c</fullName>
        <inlineHelpText>Number of open impact records associated to this person.</inlineHelpText>
        <label>Number of Impact Records</label>
        <summaryFilterItems>
            <field>Impacted_Individual_Junction__c.Status__c</field>
            <operation>equals</operation>
            <value>Currently Impacted</value>
        </summaryFilterItems>
        <summaryForeignKey>Impacted_Individual_Junction__c.Person__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Office_Number__c</fullName>
        <label>Office Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Company__c</fullName>
        <defaultValue>&quot;Employee&quot;</defaultValue>
        <inlineHelpText>What is the relationship of this individual to our company?</inlineHelpText>
        <label>Relationship to Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                    <default>true</default>
                    <label>Employee</label>
                </value>
                <value>
                    <fullName>Employee Family Member</fullName>
                </value>
                <value>
                    <fullName>3rd_Party</fullName>
                    <label>3rd Party</label>
                </value>
                <value>
                    <fullName>Community Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Region__c</fullName>
        <description>Individual&apos;s address (State/Region)</description>
        <inlineHelpText>Individual&apos;s address (State/Region)</inlineHelpText>
        <label>State/Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Street Address</description>
        <inlineHelpText>Street Address</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Individual&apos;s address (Zip Code)</description>
        <inlineHelpText>Individual&apos;s address (Zip Code)</inlineHelpText>
        <label>Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Person</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_People</fullName>
        <columns>NAME</columns>
        <columns>Job_Title__c</columns>
        <columns>Mobile_Number__c</columns>
        <columns>E_Mail_Address__c</columns>
        <columns>Currently_Impacted__c</columns>
        <columns>Marked_Safe__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All People</label>
    </listViews>
    <listViews>
        <fullName>Currently_Impacted_People</fullName>
        <columns>NAME</columns>
        <columns>Mobile_Number__c</columns>
        <columns>E_Mail_Address__c</columns>
        <columns>State_Region__c</columns>
        <columns>Currently_Impacted__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Currently_Impacted__c</field>
            <operation>notEqual</operation>
            <value>No</value>
        </filters>
        <label>Currently Impacted People</label>
    </listViews>
    <nameField>
        <label>Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>People</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>